# sillycord-bot

./: Cargo.toml
.sqlx/: query-2967f5a9c1de51c929ce5c2e4f8caab31e80b2c3425275cdb6f73de4d56c0464.json  query-46c83fa22dba08a9f016cf34411af5d5c37f8daa5afb9844daa5dbebf0555c98.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-b4e2733da7f08dcfe9cdb932a746b6c9c4fe3a6205b857f0932d2c7ed2a9b172.json  query-d73179806cd00f9fcd07a40acfebed83dabca46bd3bf41478bc62243cfa03066.json  query-f42a8f42a7eafa58947402dfc4b597a09612da4d37059ef067233b5525b72ff6.json
migrations/: 20241125045124_init.sql  20241125173833_add_kv_table.sql  20241125180340_add_quotes_table.sql  20241126022017_make_quotes_timestamp_not_nullable.sql
migrations/.sqlx/: query-29b2636e2637f315c99058df5316f77dbe966de004cd11b3ed0e567f05e15adf.json  query-470f9eb401d38f59e069814bfcc766716527c8ed539c9cc4b8f2646fdcfee83d.json  query-73b6b72dc96792688162da874363e0a567dc55542daa99e2f91902497563b8d9.json  query-b4e2733da7f08dcfe9cdb932a746b6c9c4fe3a6205b857f0932d2c7ed2a9b172.json  query-c7f221e5d730a3ba86ad4100a1303209852fe85c560657b0b165a45630f79bae.json  query-d73179806cd00f9fcd07a40acfebed83dabca46bd3bf41478bc62243cfa03066.json
src/: events.rs  main.rs  utils.rs
src/commands/: action.rs  cta.rs  cuteness.rs  dog.rs  eval.rs  mod.rs  ping.rs  profile.rs  quote.rs  vouch.rs
src/handlers/: db.rs  join.rs  mod.rs
src/structs/: mod.rs  quote.rs  user.rs  vouch.rs
